--- a/CHANGES
+++ b/CHANGES
@@ -36,4 +36,6 @@ Problems
 - Meetings
 - Take out top level menu
 - Shrink general menu
+- Align Search and Phones, right side
 - Reformat PotD
+- Reformat Posted News
